[tool.poetry]
name = "andotp-decrypt"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.7"
gnuhealth-crypto = "no"
pycryptodome = "^3.9"
docopt = "^0.6.2"
pyotp = "^2.3"
qrcode = "^6.1"
image = "^1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
